--- a/linkerd/base/linkerd-viz-app.yaml
+++ b/linkerd/base/linkerd-viz-app.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -6,21 +5,16 @@ metadata:
   namespace: argocd
   labels:
     component: observability
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"
 spec:
   project: platform-tools
   source:
     repoURL: https://helm.linkerd.io/stable
     chart: linkerd-viz
-    targetRevision: 30.6.3
+    targetRevision: 30.8.2
     helm:
       releaseName: linkerd-viz
-      valuesObject:
-        grafana:
-          enabled: true
-        prometheus:
-          enabled: true
-        tap:
-          enabled: true
   destination:
     server: https://kubernetes.default.svc
     namespace: linkerd-viz
@@ -30,3 +24,4 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+      - ApplyOutOfSyncOnly=true
