--- a/linkerd/overlays/staging/linkerd-control-plane-app.yaml
+++ b/linkerd/overlays/staging/linkerd-control-plane-app.yaml
@@ -3,25 +3,20 @@ kind: Application
 metadata:
   name: linkerd-control-plane-staging
   namespace: argocd
-  labels:
-    environment: staging
+  annotations:
+    avp.kubernetes.io/engine: "vault"
+    avp.kubernetes.io/path: "kv"
+    avp.kubernetes.io/vault-addr: "http://48.217.51.59:8200"
 spec:
-  project: platform-tools
   sources:
     - repoURL: https://helm.linkerd.io/stable
       chart: linkerd-control-plane
       targetRevision: 1.16.11
       helm:
-        releaseName: linkerd-staging
+        releaseName: linkerd
         valueFiles:
-          - "$valuesRepo/helm/values/staging-values.yaml"
+          - "$valuesRepo/values/values-stage.yaml"
     - repoURL: https://github.com/nolet7/helm.git
       targetRevision: main
       ref: valuesRepo
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: linkerd
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+
