--- a/linkerd/overlays/staging/linkerd-viz-app.yaml
+++ b/linkerd/overlays/staging/linkerd-viz-app.yaml
@@ -3,27 +3,11 @@ kind: Application
 metadata:
   name: linkerd-viz-staging
   namespace: argocd
-  labels:
-    environment: staging
 spec:
-  project: platform-tools
   source:
     repoURL: https://helm.linkerd.io/stable
     chart: linkerd-viz
-    targetRevision: 30.6.3
+    targetRevision: 30.8.2
     helm:
-      releaseName: linkerd-viz-staging
-      valuesObject:
-        grafana:
-          enabled: true
-        prometheus:
-          enabled: true
-        tap:
-          enabled: true
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: linkerd-viz
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+      releaseName: linkerd-viz
+
