--- a/linkerd/base/kustomization.yaml
+++ b/linkerd/base/kustomization.yaml
@@ -1,10 +1,10 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - namespace.yaml
   - project.yaml
-  - rbac.yaml
   - network-policies.yaml
+  - cert-sync-rbac.yaml
+  - vault-issuer-presync-job.yaml
   - linkerd-control-plane-app.yaml
   - linkerd-viz-app.yaml
