--- a/linkerd/base/linkerd-control-plane-app.yaml
+++ b/linkerd/base/linkerd-control-plane-app.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -6,6 +5,12 @@ metadata:
   namespace: argocd
   labels:
     component: control-plane
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
+    # AVP annotations (render-time inject from Vault KV)
+    avp.kubernetes.io/engine: "vault"
+    avp.kubernetes.io/path: "kv"
+    avp.kubernetes.io/vault-addr: "http://48.217.51.59:8200"
 spec:
   project: platform-tools
   sources:
@@ -15,7 +20,7 @@ spec:
       helm:
         releaseName: linkerd
         valueFiles:
-          - "$valuesRepo/helm/values/dev-values.yaml"
+          - "$valuesRepo/values/values-dev.yaml"   # dev by default; overlays swap this
     - repoURL: https://github.com/nolet7/helm.git
       targetRevision: main
       ref: valuesRepo
@@ -28,3 +33,5 @@ spec:
       selfHeal: true
     syncOptions:
       - CreateNamespace=true
+      - ApplyOutOfSyncOnly=true
+
