--- a/linkerd/base/project.yaml
+++ b/linkerd/base/project.yaml
@@ -4,11 +4,21 @@ metadata:
   name: platform-tools
   namespace: argocd
 spec:
-  description: "Service mesh & observability (Linkerd)"
-  sourceRepos: ["*"]
+  description: Linkerd control plane & viz
+  sourceRepos:
+    - https://helm.linkerd.io/stable
+    - https://github.com/nolet7/helm
+    - https://github.com/nolet7/linkerd-ls
   destinations:
-    - namespace: "*"
+    - namespace: linkerd
+      server: https://kubernetes.default.svc
+    - namespace: linkerd-viz
       server: https://kubernetes.default.svc
   clusterResourceWhitelist:
-    - group: "*"
-      kind: "*"
+    - group: '*'
+      kind: '*'
+  namespaceResourceWhitelist:
+    - group: '*'
+      kind: '*'
+  orphanedResources:
+    warn: true
