--- a/linkerd/base/rbac.yaml
+++ b/linkerd/base/rbac.yaml
@@ -1,41 +1,33 @@
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+apiVersion: v1
+kind: ServiceAccount
 metadata:
-  name: linkerd-admin-binding
+  name: linkerd-cert-sync
   namespace: linkerd
-subjects:
-  - kind: User
-    name: admin
-    apiGroup: rbac.authorization.k8s.io
-roleRef:
-  kind: ClusterRole
-  name: admin
-  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: linkerd-cert-sync-writer
+  namespace: linkerd
+rules:
+  - apiGroups: [""]
+    resources: ["secrets", "configmaps"]
+    verbs: ["create", "get", "list", "watch", "update", "patch"]
+  - apiGroups: [""]
+    resources: ["pods"]
+    verbs: ["get", "list", "watch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: linkerd-dev-binding
+  name: linkerd-cert-sync-writer
   namespace: linkerd
 subjects:
-  - kind: User
-    name: developer
-    apiGroup: rbac.authorization.k8s.io
+  - kind: ServiceAccount
+    name: linkerd-cert-sync
+    namespace: linkerd
 roleRef:
-  kind: ClusterRole
-  name: edit
+  kind: Role
+  name: linkerd-cert-sync-writer
   apiGroup: rbac.authorization.k8s.io
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  name: linkerd-tester-binding
-  namespace: linkerd
-subjects:
-  - kind: User
-    name: tester
-    apiGroup: rbac.authorization.k8s.io
-roleRef:
-  kind: ClusterRole
-  name: view
-  apiGroup: rbac.authorization.k8s.io
+
