--- a/linkerd/overlays/dev/linkerd-control-plane-app.yaml
+++ b/linkerd/overlays/dev/linkerd-control-plane-app.yaml
@@ -1,21 +1,28 @@
+# (Optional) If you prefer environment-specific app names/values,
+# include this file and add it to kustomization patches, otherwise omit.
+
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: linkerd-control-plane-dev
   namespace: argocd
-  annotations:
-    avp.kubernetes.io/engine: "vault"
-    avp.kubernetes.io/path: "kv"
-    avp.kubernetes.io/vault-addr: "http://48.217.51.59:8200"
 spec:
+  project: platform-tools
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: linkerd
   sources:
     - repoURL: https://helm.linkerd.io/stable
       chart: linkerd-control-plane
-      targetRevision: 1.16.11
+      targetRevision: 30.8.2
       helm:
-        releaseName: linkerd
         valueFiles:
-          - "$valuesRepo/values/values-dev.yaml"
-    - repoURL: https://github.com/nolet7/helm.git
-      targetRevision: main
-      ref: valuesRepo
+          - $values/values/values-dev.yaml
+    - repoURL: https://github.com/nolet7/helm
+      targetRevision: HEAD
+      ref: values
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+
