--- a/linkerd/overlays/staging/linkerd-viz-app.yaml
+++ b/linkerd/overlays/staging/linkerd-viz-app.yaml
@@ -4,10 +4,22 @@ metadata:
   name: linkerd-viz-staging
   namespace: argocd
 spec:
-  source:
-    repoURL: https://helm.linkerd.io/stable
-    chart: linkerd-viz
-    targetRevision: 30.8.2
-    helm:
-      releaseName: linkerd-viz
+  project: platform-tools
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: linkerd-viz
+  sources:
+    - repoURL: https://helm.linkerd.io/stable
+      chart: linkerd-viz
+      targetRevision: 30.8.2
+      helm:
+        valueFiles:
+          - $values/values/values-stage.yaml
+    - repoURL: https://github.com/nolet7/helm
+      targetRevision: HEAD
+      ref: values
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
 
