--- a/linkerd/base/cert-sync-rbac.yaml
+++ b/linkerd/base/cert-sync-rbac.yaml
@@ -11,8 +11,11 @@ metadata:
   namespace: linkerd
 rules:
   - apiGroups: [""]
-    resources: ["secrets","configmaps"]
-    verbs: ["get","list","create","update","patch","delete"]
+    resources: ["secrets", "configmaps"]
+    verbs: ["create", "get", "list", "watch", "update", "patch"]
+  - apiGroups: [""]
+    resources: ["pods"]
+    verbs: ["get", "list", "watch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
