--- a/linkerd/base/network-policies.yaml
+++ b/linkerd/base/network-policies.yaml
@@ -1,4 +1,3 @@
-# Default deny in linkerd namespace
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
@@ -9,7 +8,6 @@ spec:
   policyTypes: ["Ingress", "Egress"]
 
 ---
-# Allow the issuer Job to reach Vault (48.217.51.59:8200), kube-apiserver (34.9.235.222:443) and DNS
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
@@ -24,18 +22,10 @@ spec:
     - to:
         - ipBlock:
             cidr: 48.217.51.59/32   # Vault
+        - namespaceSelector: {}      # kube-system (simplest)
       ports:
         - protocol: TCP
-          port: 8200
-    - to:
-        - ipBlock:
-            cidr: 34.9.235.222/32   # k8s API server (from your kubeconfig)
-      ports:
+          port: 8200                 # Vault
         - protocol: TCP
-          port: 443
-    - to:
-        - namespaceSelector: {}
-      ports:
-        - protocol: UDP
-          port: 53
+          port: 443                  # K8s API
 
