--- a/linkerd/base/rbac.yaml
+++ b/linkerd/base/rbac.yaml
@@ -1,33 +1,2 @@
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: linkerd-cert-sync
-  namespace: linkerd
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
-metadata:
-  name: linkerd-cert-sync-writer
-  namespace: linkerd
-rules:
-  - apiGroups: [""]
-    resources: ["secrets", "configmaps"]
-    verbs: ["create", "get", "list", "watch", "update", "patch"]
-  - apiGroups: [""]
-    resources: ["pods"]
-    verbs: ["get", "list", "watch"]
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  name: linkerd-cert-sync-writer
-  namespace: linkerd
-subjects:
-  - kind: ServiceAccount
-    name: linkerd-cert-sync
-    namespace: linkerd
-roleRef:
-  kind: Role
-  name: linkerd-cert-sync-writer
-  apiGroup: rbac.authorization.k8s.io
-
+# Intentionally left without the linkerd-cert-sync RBAC to avoid duplicates.
+# The cert-sync ServiceAccount/Role/RoleBinding live in cert-sync-rbac.yaml.
