--- a/linkerd/argocd/linkerd-control-plane-app.yaml
+++ b/linkerd/argocd/linkerd-control-plane-app.yaml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: linkerd-viz
+  name: linkerd-control-plane
   namespace: argocd
 spec:
   project: platform-tools
   destination:
     server: https://kubernetes.default.svc
-    namespace: linkerd-viz
+    namespace: linkerd
   sources:
-    - repoURL: https://helm.linkerd.io/stable
-      chart: linkerd-viz
-      targetRevision: 30.8.2
+    - repoURL: oci://ghcr.io/linkerd/charts
+      chart: linkerd-control-plane
+      targetRevision: "2.14.0"
       helm:
         valueFiles:
           - $values/values/values-dev.yaml
